2-17-features/k8s/allow-all-egress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-egress
spec: {}
