2-17-features/k8s/allow-edge-2.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: allow-color-2
  namespace: faces
spec:
  parentRefs:
    - kind: EgressNetwork
      group: policy.linkerd.io
      name: all-egress
      namespace: linkerd-egress
      port: 8000
  rules:
    - matches:
        - method:
            service: ColorService
            method: Center
          headers:
            - type: Exact
              name: x-faces-user
              value: Center
