2-17-features/k8s/allow-edge.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: allow-color
  namespace: faces
spec:
  parentRefs:
    - kind: EgressNetwork
      group: policy.linkerd.io
      name: all-egress
      namespace: linkerd-egress
      port: 8000
  rules:
    - matches:
        - method:
            service: ColorService
            method: Edge
