2-17-features/k8s/smiley-auth.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: smiley-authz
  namespace: faces
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: face-authn
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: smiley-http
